Stopped spans wrapping by default

--- a/css/master.css
+++ b/css/master.css
@@ -69,3 +69,8 @@ hr
   -webkit-user-select: none;
   -moz-user-select: none;
 }
+
+span
+{
+  white-space:nowrap;
+}
